--- a/app/views/medical_procedures/_medical_procedure.html.erb
+++ b/app/views/medical_procedures/_medical_procedure.html.erb
@@ -4,7 +4,7 @@
         <%= t('activerecord.attributes.medical_procedure.animal_id') %>:
       </p>
       <p class="body-lg-text pl-2 inline">
-        <%= link_to animal_path(medical_procedure), class: "link_to", data: {turbo_frame: "_top"} do %>
+        <%= link_to animal_path(medical_procedure.animal), class: "link_to", data: {turbo_frame: "_top"} do %>
           <%= show_animal(medical_procedure.animal) %>
         <% end %>
       </p>
