--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -20,7 +20,7 @@
               } do |f| %>
 
       <div class="mb-2">
-        <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>
+        <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
       </div>
       <div class="flex justify-between items-center gap-4 mb-2 -mt-2">
         <div class="flex justify-between items-center gap-4 text-sm">
