--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -63,7 +63,7 @@
           <div class="">
             <div>
               <%= f.label :nickname_or_surname_or_color_or_distinctive_feature_or_from_people_or_from_place_or_medical_history_or_notes_body_cont, "#{t('label.Search Text Fields')}", class: "fancy_label" %>
-              <%= f.search_field :nickname_or_surname_or_color_or_distinctive_feature_or_from_people_or_from_place_or_medical_history_or_notes_body_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
+              <%= f.search_field :nickname_or_surname_or_color_or_distinctive_feature_or_from_people_or_from_place_or_medical_history_or_notes_body_cont, placeholder: t('text.Contains'), class: 'filter_select', :"data-action" => "input->autosubmit#search" %>
             </div>
 
             <div class="mb-2">
@@ -73,11 +73,11 @@
  
             <div class="mb-2">
               <%= f.label :nickname_cont, class: "fancy_label" %>
-              <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
+              <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'filter_select', :"data-action" => "input->autosubmit#search" %>
             </div>
             <div class="mb-2">
               <%= f.label :surname_cont, class: "fancy_label" %>
-              <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
+              <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'filter_select', :"data-action" => "input->autosubmit#search" %>
             </div>
             <div class="mb-2">
               <%= f.label :gender, class: "fancy_label" %>
@@ -88,21 +88,23 @@
               <%= f.select(:size_eq, size_list, { include_blank: "#{t('text.Select')} ..." }, { class: "filter_select", :"data-action" => "autosubmit#submit" }) %>
             </div>
             <div class="mb-2">
-              <%= f.checkbox :sterilization_eq, class: "check_box" %>
-              <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}", class: "body-sm-semibold-text", :"data-action" => "autosubmit#submit" %>
+              <%= f.checkbox :sterilization_eq, class: "check_box", :"data-action" => "input->autosubmit#submit" %>
+              <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}", class: "body-sm-semibold-text" %>
             </div>
             <div class="">
               <div class="">
                 <%= f.label :arival_date_gteq, "#{t('activerecord.attributes.animal.arival_date')}", class: "fancy_label" %>
-                <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'filter_select',
+                <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'filter_select', :"data-action" => "autosubmit#submit",
+                  value: @arival_date_gteq.present? ? @arival_date_gteq : nil,
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "d-m-Y"
                   } %>
               </div>
-              <div class="mt-2 ml-2">
-                <%= f.label :arival_date_lteq, class: "hidden" %>
-                <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'filter_select',
+              <div class="mt-2">
+                <%= f.label :arival_date_lteq, "#{t('activerecord.attributes.animal.arival_date')}", class: "fancy_label" %>
+                <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'filter_select', :"data-action" => "autosubmit#submit",
+                  value: @arival_date_lteq.present? ? @arival_date_lteq : nil,
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "d-m-Y"
