--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -126,10 +126,10 @@
               </button>
             </div>
             <div class="mt-4">
-              <%= link_to "Export All to CSV", animals_path(format: 'csv'), class: "link_to" if policy(Animal).edit? %>
+              <%= link_to "Export All to CSV", animals_path(format: 'csv', animal_type_id: @animal_type_id), class: "link_to" if policy(Animal).edit? %>
             </div>
             <div class="mt-2">
-              <%= link_to "Export All to PDF", animals_path(format: :pdf), class: "link_to" if policy(Animal).edit? %>
+              <%= link_to "Export All to PDF", animals_path(format: :pdf, animal_type_id: @animal_type_id), class: "link_to" if policy(Animal).edit? %>
             </div>
           </div>
         </div>
