--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,10 +12,10 @@
     </div>
     <section aria-labelledby="sale-heading" class="relative mx-auto flex flex-col items-center text-center sm:px-6 lg:px-8">
 
-      <div class="min-h-screen flex flex-col justify-top items-center pt-8">
+      <div class="min-h-screen flex flex-col justify-top items-center pt-2">
         <div class="bg-opacity-25 bg-white p-8 sm:p-12 rounded-lg shadow-xl w-full max-w-screen-lg mx-auto text-center">
-          <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-6 sm:mb-8" id="sale-heading">Dogs Ambulance</h1>
-          <p class="text-base sm:text-lg text-gray-750 mb-6 sm:mb-8">
+          <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-6" id="sale-heading">Dogs Ambulance</h1>
+          <p class="text-base sm:text-lg text-gray-750 mb-6">
           <%= t("text.Lena Beresina's shelter") %>
           </p>
 
