--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -1,4 +1,4 @@
-<div class="min-w-full">
+<div class="">
   <%= form_with url: cart_add_path, method: :post, 
     data: { controller: "checkboxselectall",
               checkboxselectall_target: "form",
