--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -2,9 +2,18 @@
 
   <% content_for :title, "Animals" %>
 
-  <div class="flex justify-between items-center">
+  <div class="md:flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id, @animal_type_id) %></h1>
+    <div class="justify-self-end items-center lg:hidden mr-4" data-controller="navbar">
+      <!--  Mobile menu button -->
+      <button class="mobile-menu-button rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->navbar#toggle">
+        <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
+          <i class="fa-solid fa-filter"></i>
+          <span class="sr-only">Filters</span>
+        </div>
+      </button>
+    </div>
     <% if policy(Animal).new? %>
       <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
     <% else %>
@@ -24,8 +33,8 @@
         <%= render 'side_filters', f: f %>
     
         <div class="flex-1 mx-2">
-          <div class="flex justify-between items-center gap-4 mb-2 -mt-2">
-            <div class="flex justify-between items-center gap-4 text-sm">
+          <div class="md:flex justify-between items-center gap-4 mb-2 -mt-2">
+            <div class="md:flex justify-between items-center gap-4 text-sm">
               <div class="display inline">
                 <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
                 <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "#{t('text.Select')} ..." , class: "filter_select",
@@ -49,8 +58,7 @@
             </div>
           </div>
           <%= turbo_frame_tag "turbo-animals" do %>
-            <div class="mb-20 min-w-full" id="animals_listing">
-              
+            <div class="" id="desktop-animals_listing">
               <% if @view == 'table' %>
                 <%= render 'animal_list' %>
               <% else %>
@@ -59,6 +67,10 @@
               <div class="my-2 flex justify-center" >
                 <%= paginate @animals %>
               </div>
+            </div>
+            <div id="mobile-animals_listing" class="lg:hidden">
+              <%= render 'picture_list' %>
+              <%= paginate @animals %>
             </div>
           <% end %>
         </div>
