--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,13 +1,13 @@
-<div class="w-full">
+<div class="w-full" data-controller='sidebar'>
 
   <% content_for :title, "Animals" %>
 
   <div class="md:flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id, @animal_type_id) %></h1>
-    <div class="justify-self-end items-center lg:hidden mr-4" data-controller="navbar">
+    <div class="justify-self-end items-center md:hidden mr-4" data-controller="navbar">
       <!--  Mobile menu button -->
-      <button class="mobile-menu-button rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->navbar#toggle">
+      <button class="mobile-menu-button rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
         <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
           <i class="fa-solid fa-filter"></i>
           <span class="sr-only">Filters</span>
@@ -29,8 +29,11 @@
               } do |f| %>
 
       <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
-      <div class="relative min-h-screen md:flex">
-        <%= render 'side_filters', f: f %>
+      <div class="z-0 relative min-h-screen md:flex">
+        <div class="z-50 sidebar w-62 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
+
+          <%= render 'side_filters', f: f %>
+        </div>
     
         <div class="flex-1 mx-2">
           <div class="md:flex justify-between items-center gap-4 mb-2 -mt-2">
