add plural_name to AnimalType

--- a/app/views/animal_types/_form.html.erb
+++ b/app/views/animal_types/_form.html.erb
@@ -15,6 +15,11 @@
     <%= form.text_field :name, class: "input_text_field", required: true %>
   </div>
 
+  <div class="my-5">
+    <%= form.label :plural_name %>
+    <%= form.text_field :plural_name, class: "input_text_field", required: true %>
+  </div>
+
   <div class="inline">
     <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
   </div>
