--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -5,20 +5,23 @@
   <div class="md:flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id, @animal_type_id) %></h1>
-    <div class="justify-self-end items-center md:hidden mr-4" data-controller="navbar">
-      <!--  Mobile menu button -->
-      <button class="mobile-menu-button rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
-        <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
-          <i class="fa-solid fa-filter"></i>
-          <span class="sr-only">Filters</span>
-        </div>
-      </button>
-    </div>
+    
     <% if policy(Animal).new? %>
-      <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+      <div class="mb-2">
+        <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+      </div>
     <% else %>
       <div></div>
     <% end %>
+  </div>
+  <div class="md:hidden mr-4">
+    <!--  Mobile menu button -->
+    <button class="rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
+      <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
+        <i class="fa-solid fa-filter"></i>
+        <span class="sr-only">Filters</span>
+      </div>
+    </button>
   </div>
 
   <div>
