--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -5,23 +5,24 @@
   <div class="md:flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id, @animal_type_id) %></h1>
-    
-    <% if policy(Animal).new? %>
-      <div class="mb-2">
-        <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+    <div class="flex justify-between">
+      <% if policy(Animal).new? %>
+        <div class="mb-2 mr-2">
+          <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+        </div>
+      <% else %>
+        <div></div>
+      <% end %>
+      <div class="md:hidden mr-4">
+      <!--  Mobile menu button -->
+        <button class="rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
+          <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
+            <i class="fa-solid fa-filter"></i>
+            <span class="sr-only">Filters</span>
+          </div>
+        </button>
       </div>
-    <% else %>
-      <div></div>
-    <% end %>
-  </div>
-  <div class="md:hidden mr-4">
-    <!--  Mobile menu button -->
-    <button class="rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
-      <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
-        <i class="fa-solid fa-filter"></i>
-        <span class="sr-only">Filters</span>
-      </div>
-    </button>
+    </div>
   </div>
 
   <div>
@@ -33,11 +34,9 @@
 
       <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
       <div class="z-0 relative min-h-screen md:flex">
-        <div class="z-50 sidebar w-62 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
-
+        <div class="z-50 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
           <%= render 'side_filters', f: f %>
         </div>
-    
         <div class="flex-1 mx-2">
           <div class="md:flex justify-between items-center gap-4 mb-2 -mt-2">
             <div class="md:flex justify-between items-center gap-4 text-sm">
