--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav data-controller="navbar" class="bg-green-900">
+<nav data-controller="navbar" class="bg-green-900 sticky top-0 z-50">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="flex items-center">
@@ -110,7 +110,6 @@
         </button>
       </div>
       <%# end Mobile Nav button %>
-
     </div>
   </div>
 
