--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,86 +1,70 @@
-<div class="w-full" data-controller='sidebar'>
+<div class="w-full">
 
   <% content_for :title, "Animals" %>
 
-  <div class="md:flex justify-between items-center">
+  <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
     <h1><%= show_status(@status_id, @animal_type_id) %></h1>
-    <div class="flex justify-between">
-      <% if policy(Animal).new? %>
-        <div class="mb-2 mr-2">
-          <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
-        </div>
-      <% else %>
-        <div></div>
-      <% end %>
-      <div class="md:hidden mr-4">
-      <!--  Mobile menu button -->
-        <button class="rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
-          <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
-            <i class="fa-solid fa-filter"></i>
-            <span class="sr-only">Filters</span>
-          </div>
-        </button>
-      </div>
-    </div>
+    <% if policy(Animal).new? %>
+      <%= link_to t('menu.new'), new_animal_path, class: "primary_button" %>
+    <% else %>
+      <div></div>
+    <% end %>
   </div>
 
-  <div>
+  <div class="z-0 relative min-h-screen md:flex">
     <%= search_form_for @q,
       data: { controller: "autosubmit",
               autosubmit_target: "form",
               turbo_frame: "turbo-animals"
               } do |f| %>
 
+
       <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
-      <div class="z-0 relative min-h-screen md:flex">
-        <div class="z-50 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
-          <%= render 'side_filters', f: f %>
-        </div>
-        <div class="flex-1 mx-2">
-          <div class="md:flex justify-between items-center gap-4 mb-2 -mt-2">
-            <div class="md:flex justify-between items-center gap-4 text-sm">
-              <div class="display inline">
-                <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
-                <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "#{t('text.Select')} ..." , class: "filter_select",
-                  :"data-action" => "autosubmit#submit" %>
-              </div>
-              <div>
-                <label for="order" class="fancy_label"><%= t('label.order') %></label>
-                <%= select_tag "order", options_for_select(sorting_order, selected: @order), class: "filter_select",
-                  :"data-action" => "autosubmit#submit" %>
-              </div>
-              <div class="mt-2 ml-4">
-                <%= page_entries_info @animals %>
-              </div>
-            </div>
-            <div>
-              <div>
-                <label for="switch_view" class="fancy_label"><%= t('label.view') %></label>
-                <%= select_tag "switch_view", options_for_select(index_views, selected: @view), class: "filter_select",
-                  :"data-action" => "autosubmit#submit" %>
-              </div>
-            </div>
+      <div class="z-40 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
+        <%= render 'side_filters', f: f %>
+      </div>
+      
+    <% end %>
+    <div class="flex-1 mx-2">
+      <div class="flex justify-between items-center gap-4 mb-2 -mt-2">
+        <div class="flex justify-between items-center gap-4 text-sm">
+          <div class="display inline">
+            <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
+            <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "#{t('text.Select')} ..." , class: "filter_select",
+              :"data-action" => "autosubmit#submit" %>
           </div>
-          <%= turbo_frame_tag "turbo-animals" do %>
-            <div class="" id="desktop-animals_listing">
-              <% if @view == 'table' %>
-                <%= render 'animal_list' %>
-              <% else %>
-                <%= render 'picture_list' %>
-              <% end %>
-              <div class="my-2 flex justify-center" >
-                <%= paginate @animals %>
-              </div>
-            </div>
-            <div id="mobile-animals_listing" class="lg:hidden">
-              <%= render 'picture_list' %>
-              <%= paginate @animals %>
-            </div>
-          <% end %>
+          <div>
+            <label for="order" class="fancy_label"><%= t('label.order') %></label>
+            <%= select_tag "order", options_for_select(sorting_order, selected: @order), class: "filter_select",
+              :"data-action" => "autosubmit#submit" %>
+          </div>
+          <div class="mt-2 ml-4">
+            <%= page_entries_info @animals %>
+          </div>
+        </div>
+        <div>
+          <div>
+            <label for="switch_view" class="fancy_label"><%= t('label.view') %></label>
+            <%= select_tag "switch_view", options_for_select(index_views, selected: @view), class: "filter_select",
+              :"data-action" => "autosubmit#submit" %>
+          </div>
         </div>
       </div>
-    <% end %>
+      <%= turbo_frame_tag "turbo-animals" do %>
+        <div class="mb-20 min-w-full" id="animals_listing">
+          
+          <% if @view == 'table' %>
+            <%= render 'animal_list' %>
+          <% else %>
+            <%= render 'picture_list' %>
+          <% end %>
+          <div class="my-2 flex justify-center" >
+            <%= paginate @animals %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
   
 </div>
