--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -31,10 +31,9 @@
               turbo_frame: "turbo-animals"
               } do |f| %>
 
-      <div>
-        <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
-      </div>
       <div class="md:flex justify-between items-center gap-4 mb-2 -mt-2">
+        <input type="hidden" id="animal_type_id" name="animal_type_id" value=<%= @animal_type_id %>>
+
         <div class="md:flex justify-between items-center gap-4 text-sm">
           <div class="display inline">
             <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
@@ -58,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="md:flex justify-between items-center gap-4 mb-2">
+      <div class="md:flex justify-between gap-4 mb-2">
         <div class="z-40 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
           <%= render 'side_filters', f: f %>
         </div>
