make pages work on mobile

--- a/app/views/admin_users/_admin_users_list.html.erb
+++ b/app/views/admin_users/_admin_users_list.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag 'admin_users' do %>
   <div class="min-w-full">
-    <table class="mi_table" id="desk-table">
+    <table class="mi_table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
           <th class="header_th"><%= t('activerecord.attributes.admin_user.email') %></th>
