--- a/app/views/animals/_pictures.html.erb
+++ b/app/views/animals/_pictures.html.erb
@@ -10,7 +10,7 @@
       <%= form_with(model: @animal, url: upload_pictures_path, method: :post, html: { class: "sm:flex sm:items-center" }) do |form| %>
         <%= form.label :pictures, "Pictures (upload multiple images)", class: "hidden" %>
         <%= form.file_field :pictures, multiple: true, class: "body-sm-text" %>
-        <%= form.submit t('forms.buttons.save'), class: "primary_button" %>
+        <%= form.submit t('forms.buttons.save'), class: "primary_button mt-2" %>
       <% end %>
     <% end %>
   </div>
