--- a/app/views/animals/_animal_medicine.html.erb
+++ b/app/views/animals/_animal_medicine.html.erb
@@ -1,7 +1,7 @@
 
 <%= turbo_frame_tag 'procedures' do %>
   <div class="min-w-full">
-    <table class="mi_table" id="desk-table">
+    <table class="mi_table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.procedure_type_id') %></th>
