--- a/app/views/cart/_cart_animals.html.erb
+++ b/app/views/cart/_cart_animals.html.erb
@@ -1,5 +1,5 @@
 
-    <table class="mi_table" id="desk-table">
+    <table class="mi_table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
           <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
