--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'cart' %>
-<div class="flex flex-col flex-nowrap items-center gap-5 justify-center py-12 lg:flex-row">
+<div class="md:flex flex-col flex-nowrap items-center gap-5 justify-center py-12 lg:flex-row">
 <div class="grow">
     <%= render 'order_medical' %>
   </div>
