--- a/app/views/medical_procedures/_procedure_list.html.erb
+++ b/app/views/medical_procedures/_procedure_list.html.erb
@@ -1,5 +1,5 @@
 <div class="min-w-full">
-  <table class="mi_table" id="desk-table">
+  <table class="mi_table">
     <thead class="border border-l-0 border-r-0 border-gray-750">
       <tr>
         <th class="header_th">
