--- a/app/views/cart/_cart.html.erb
+++ b/app/views/cart/_cart.html.erb
@@ -1,5 +1,10 @@
 <%= turbo_frame_tag "cart" do %>
-  <h1><%= t('text.cart') %></h1>
+  <div class="flex justify-between items-center">
+    <h1><%= t('text.cart') %></h1>
+    <%= link_to t('forms.buttons.empty_cart'), empty_cart_path(@cart), data: { turbo_confirm: 'Are you sure?', turbo_method: :post }, class: "primary_button" %>
+    <%#= link_to cancel_recurring_reservation_path(@reservation, :cancel_type => "one"), data: { turbo_confirm: 'Are you sure?', turbo_method: :post} do %>
+
+  </div>
   <% if @cart && @cart&.cart_animals&.count > 0 %>
     <%= render "cart/cart_animals" %>
   <% else %>
