edit filter icon

--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -13,7 +13,7 @@
       <% end %>
       <div class="md:hidden mr-4">
         <!--  Mobile menu button -->
-        <button class="rounded h-10 w-10 bg-blue-900 text-white focus:outline-none focus:bg-blue-800" data-action="click->sidebar#toggle">
+        <button class="rounded h-10 w-10 bg-green-950 text-white focus:outline-none focus:bg-green-900" data-action="click->sidebar#toggle">
           <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
             <i class="fa-solid fa-filter"></i>
             <span class="sr-only">Filters</span>
