--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full" data-controller='sidebar'>
+<div class="w-full" data-controller='autosubmit'>
 
   <% content_for :title, "Animals" %>
 
@@ -13,7 +13,7 @@
       <% end %>
       <div class="md:hidden mr-4">
         <!--  Mobile menu button -->
-        <button class="rounded h-10 w-10 bg-green-950 text-white focus:outline-none focus:bg-green-900" data-action="click->sidebar#toggle">
+        <button class="rounded h-10 w-10 bg-green-950 text-white focus:outline-none focus:bg-green-900" data-action="click->autosubmit#toggle">
           <div class="mx-auto h-5 w-5" viewBox="0 0 24 24">
             <i class="fa-solid fa-filter"></i>
             <span class="sr-only">Filters</span>
@@ -26,8 +26,7 @@
   <div class="z-0 relative md:flex">
     
     <%= search_form_for @q,
-      data: { controller: "autosubmit",
-              autosubmit_target: "form",
+      data: { autosubmit_target: "form",
               turbo_frame: "turbo-animals"
               } do |f| %>
 
@@ -58,7 +57,7 @@
         </div>
       </div>
       <div class="md:flex justify-between gap-4 mb-2">
-        <div class="z-40 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-sidebar-target="sidebar">
+        <div class="z-40 bg-white border shadow sidebar w-64 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out" data-autosubmit-target="sidebar">
           <%= render 'side_filters', f: f %>
         </div>
       
