--- a/app/views/animals/_side_filters.html.erb
+++ b/app/views/animals/_side_filters.html.erb
@@ -75,9 +75,9 @@
     </button>
   </div>
   <div class="mt-4">
-    <%= link_to "Export All to CSV", animals_path(format: 'csv', animal_type_id: @animal_type_id), class: "link_to" if policy(Animal).edit? %>
+    <%= link_to t('forms.buttons.Export All to CSV'), animals_path(format: 'csv', animal_type_id: @animal_type_id), class: "tertiary_button" if policy(Animal).edit? %>
   </div>
   <div class="mt-2">
-    <%= link_to "Export All to PDF", animals_path(format: :pdf, animal_type_id: @animal_type_id), class: "link_to" if policy(Animal).edit? %>
+    <%= link_to t('forms.buttons.Export All to PDF'), animals_path(format: :pdf, animal_type_id: @animal_type_id), class: "tertiary_button" if policy(Animal).edit? %>
   </div>
 </div>
