reload that page after empty cart method

--- a/app/views/cart/_add_sterilization_to_animals.html.erb
+++ b/app/views/cart/_add_sterilization_to_animals.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "add_vacination" do %>
+<%= turbo_frame_tag "add_sterilization" do %>
   <h2 class="mt-4"><%= t('forms.buttons.Add Sterilization') %></h2>
   <%= form_with url: add_sterilization_to_animals_path do |form1| %>
 
