--- a/app/views/aviaries/_aviary_list.html.erb
+++ b/app/views/aviaries/_aviary_list.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag 'aviaries' do %>
-  <div class="min-w-full">
+  <div class="min-w-full overflow-x-auto">
     <table class="mi_table">
       <thead class="border border-l-0 border-r-0 border-gray-750">
         <tr>
