--- a/app/views/medical_procedures/_procedure_list.html.erb
+++ b/app/views/medical_procedures/_procedure_list.html.erb
@@ -1,4 +1,4 @@
-<div class="min-w-full">
+<div class="min-w-full overflow-x-auto">
   <%= form_with url: complete_procedures_path, method: :post, 
     data: { controller: "checkboxselectall",
               checkboxselectall_target: "form",
